# treasure

./: .editorconfig  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  exclusion.dic  vcpkg-configuration.json  vcpkg.json
cmake/: treasureConfig.cmake.in
include/treasure/: treasure.h
test/: CMakeLists.txt  test_treasure.cpp
